[tool.poetry]
name = "stealh-mode-three-bing-ads"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
google-cloud-bigquery = "^3.11.0"
compose = "^1.4.8"
bingads = "^13.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.11
ignore_missing_imports = true
namespace_packages = true
